tests/cases/vectors/errors/vector-struct-field-runtime-abi.ari
struct Holder {
  values: Vec[i64],
}

fn main() -> i64 {
  return 0;
}
